analytics-resources/thanos-prom/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  gateways:
    - istio-system/ops-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /grafana/
      rewrite:
        uri: /
      route:
        - destination:
            host: grafana
            port:
              number: 3000
